--- a/index.css
+++ b/index.css
@@ -2,6 +2,11 @@
 
 body{
   background: #FBFCFF;
+  color: #2B303A;
+}
+
+span{
+  font-size: 1.5rem;
 }
 
 ul{
@@ -81,36 +86,50 @@ i{
 
 .t_column{
   grid-area: t;
-  -ms-grid-area: t;
 }
 
 .p_column{
   grid-area: p;
-  -ms-grid-area: p;
 }
 
 .main_headline{
   grid-area: mh;
-  -ms-grid-area: mh;
 }
 
 .sub_headline{
   grid-area: sh;
-  -ms-grid-area: sh;
+}
+.about{
+  grid-area: about;
+}
+
+.about .section{
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  background-color: #e9e9ea;
+  margin: 0 0 15px 0 ;
+  height: 275px;
+  line-height: 2rem;
+  text-align: left;
+  font-family: 'Muli', sans-serif;
+  font-size: 1.5rem;
+  padding: 5px;
+  color: #505051;
+}
+
+.about article{
+  text-align: justify;
+  padding: 10px 5px;
 }
 
 .row{
   display: grid;
-  -ms-display: grid;
   grid-template-columns: 450px 15px 450px;
-  grid-template-rows: 325px auto;
-  -ms-grid-template-columns: 450px 15px 450px;
+  grid-template-rows: 315px 315px auto;
   grid-template-areas:
   "mh . sh"
+  "about about about"
   "p . t";
-  -ms-grid-template-areas:
-    "mh . sh"
-    "p . t";
 }
 
 
@@ -227,23 +246,15 @@ i{
     border-radius: 5px;
   }
   .row{
-    -ms-display: grid;
-    grid-template-rows: 150px 125px 1fr 15px 1fr;
-    -ms-grid-template-rows: 150px 110px 1fr 15px 1fr;
+    grid-template-rows: 150px 125px 725px 1fr 15px 1fr;
     grid-template-columns: auto;
-    -ms-grid-template-columns: auto;
     grid-template-areas:
     "mh"
     "sh"
+    "about"
      "p"
      "."
      "t";
-     -ms-grid-template-areas:
-     "mh"
-     "sh"
-      "p"
-      "."
-      "t";
   }
 
   .flip-container, .front, .back {
@@ -285,6 +296,25 @@ i{
 
   .secondary_size{
     margin: 0 10px;
+  }
+
+  .about .section{
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    background-color: #e9e9ea;
+    margin: 0 0 15px 0 ;
+    height: 700px;
+    line-height: 2rem;
+    text-align: left;
+    font-family: 'Muli', sans-serif;
+    font-size: 1rem;
+    padding: 5px;
+    color: #505051;
+  }
+
+  .about article{
+    text-align: justify;
+    padding: 5px 5px;
   }
 
   .projects li {
