--- a/index.css
+++ b/index.css
@@ -21,13 +21,29 @@ body::-webkit-scrollbar-thumb {
   position: relative;
   cursor: pointer;
 }
+[class^="tooltip"]:first-child:after {
+  bottom:-40px;
+  left: 150px;
+
+}
+
+[class^="tooltip"]:nth-child(5):after {
+  bottom:-40px;
+  left: -50px;
+}
+
+[class^="tooltip"]:nth-child(4):after {
+  bottom:-40px;
+  left: 0;
+}
+
 [class^="tooltip"]:after {
   opacity: 0;
   visibility: hidden;
   position: absolute;
   content: attr(data-tooltip);
   padding:10px;
-  bottom: 100px;
+  bottom:-40px;
   left: 50%;
   -webkit-transform: translateX(-50%) translateY(-2px);
   transform: translateX(-50%) translateY(-2px);
